feat: upgrade version and get tests to run